# ontoloom

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  biography.ontology.json  demo.py  demo2.py  drinks.ontology.json  ontoloom.code-workspace  pasta-shapes.ontology.json  pizza.ontology.json  proposal.md  pyproject.toml  pyrightconfig.json  research-papers.ontology.json  ruff.toml  temp.sh  visdemo.py
ontology-hydra/: .gitignore  AGENTS.md  README.md  TODO.md  config.example.toml  demo.ipynb  demo.py  pyproject.toml  strategies.md  strategies_clean.md
ontology-hydra/docs/: AGENT_MEMORY.md  ARCHITECTURE.md  BOOTSTRAP.md  CATALOG.md  DESIGN.md  DIAGNOSTICS.md  DIAGNOSTICS_ARCH.md  DIAGS.md  EXPLORATION.md  FUTURE.md  IDEAS.md  PATTERNS.md  PLAN.md  PROMPTING.md  RESOLUTION.md  SUMMARIZATION.md
ontology-hydra/docs/.obsidian/: workspace.json
ontology-hydra/src/ontology_hydra/: __init__.py  config.py  prompts.py
ontology-hydra/src/ontology_hydra/cli/: args.py  logging.py  main.py
ontology-hydra/src/ontology_hydra/cli/commands/: generate_ontology.py  init.py
ontology-hydra/src/ontology_hydra/cli/components/: title.py
ontology-hydra/src/ontology_hydra/kg/: generator.py  merging.py  schema.py
ontology-hydra/src/ontology_hydra/llm/: engine.py
ontology-hydra/src/ontology_hydra/metrics/: __init__.py  changes.py  iteration.py  locality.py  models.py  ontology.py  structural.py
ontology-hydra/src/ontology_hydra/ontology/: export.py  models.py  run.py
ontology-hydra/src/ontology_hydra/ontology/agent/: loop.py
ontology-hydra/src/ontology_hydra/ontology/components/: test.py
ontology-hydra/src/ontology_hydra/ontology/components/implementation/: draft_ops.py  pipeline.py  review_ops.py  revise_ops.py
ontology-hydra/src/ontology_hydra/ontology/components/planning/: draft_plan.py  (+2 more)
ontology-hydra/src/ontology_hydra/ontology/operations/: __init__.py  add_class.py  add_data_property.py  add_object_property.py  delete_class.py  delete_object_property.py  merge_classes.py  ops.py  update_class.py  update_object_property.py
ontology-hydra/src/ontology_hydra/ontology/revision/: __init__.py  diff.py  executor.py  helpers.py  operations.py
ontology-hydra/src/ontology_hydra/utils/: cache.py  schema.py  test.py
ontology-hydra/src/ontology_hydra/utils/schema/: __init__.py  formatting.py  generation.py  llm.py  models.py  types.py
ontoloom/: pyproject.toml
ontoloom/src/ontoloom/: canonical.py  connection.py  entity_text.py  entity_walker.py  errors.py  export.py  hashing.py  history.py  load.py  models.py  prefixes.py  text_index.py  transactions.py  utils.py
ontoloom/src/ontoloom/axioms/: deserialize.py  entity_walker.py  hashes.py  hashing.py  mutations.py  reader.py  store.py  types.py
ontoloom/src/ontoloom/codegen/: gen_patterns.py
ontoloom/src/ontoloom/core/ontology/: canonical.py  extract.py  operations.py  pragmas.sql  schema.sql  store.py  types.py
ontoloom/src/ontoloom/core/utils/: cache.py
ontoloom/src/ontoloom/entities/: find_duplicate_entities.py  projections.py  reader.py  store.py  text.py  types.py
ontoloom/src/ontoloom/ontology/: axioms.py  canonical.py  connection.py  entities.py  errors.py  export.py  extract.py  history.py  indexes.py  load.py  pragmas.sql  prefixes.py  schema.sql  selections.py  store.py  types.py
ontoloom/src/ontoloom/ontology/models/: _pydantic.py  assertions.py  axioms.py  base.py  expressions.py  literals.py  markers.py
ontoloom/src/ontoloom/ontology/patterns/: __init__.py  _generated.py  match.py  models.py  search.py  slot.py
ontoloom/src/ontoloom/owl/: _render.py  annotations.py  axioms.py  expressions.py  iri.py  literals.py  markers.py  prefix_name.py
ontoloom/src/ontoloom/patterns/: __init__.py  _generated.py  base.py  codegen.py  match.py  matcher.py  search.py  slot.py  store.py  types.py
ontoloom/src/ontoloom/prefixes/: store.py  types.py
ontoloom/src/ontoloom/query/: _constraints.py  _dispatch.py  _normalize.py  _predicates.py  _selection_ref.py  base.py  constraints.py  count_axioms_by_type.py  count_entities.py  count_entities_by_role.py  dispatch.py  find_axioms.py  find_duplicate_entities.py  find_entities.py  list_axiom_hashes.py  list_axioms.py  list_entities.py  read_axiom_selection.py  read_entity_selection.py  rendered.py  search_axioms.py  stream_axioms.py
ontoloom/src/ontoloom/selections/: compose.py  expr.py  metadata.py  persistence.py  read_axiom_selection.py  read_entity_selection.py  reader.py  store.py  types.py
ontoloom/src/ontoloom/sql/: pragmas.sql  schema.sql
ontoloom/tests/: conftest.py  test_canonical.py  test_codegen.py  test_crud.py  test_duplicates.py  test_entity_walker.py  test_export.py  test_expressions.py  test_extract.py  test_history.py  test_iri.py  test_markers.py  test_match_axioms.py  test_match_order_insensitive.py  test_models.py  test_owl_render.py  test_query_constraints.py  test_query_count_axioms_by_type.py  test_query_count_entities.py  test_query_count_entities_by_role.py  test_query_counts.py  test_query_dispatch.py  test_query_find_duplicate_entities.py  test_query_find_entities.py  test_query_list_axiom_hashes.py  test_query_list_axioms.py  test_query_list_axioms_family.py  test_query_list_entities.py  test_query_normalize.py  test_query_pagination.py  test_query_read_axiom_selection.py  test_query_read_entity_selection.py  test_query_read_selection.py  test_query_search_axioms.py  test_query_selection_refs.py  test_query_stream_axioms.py  test_resolve_hash_prefix.py  test_resolve_within.py  test_search.py  test_search_smoke.py  (+8 more)
tools/hydra-viz/: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
tools/hydra-viz/frontend/: .prettierrc  README.md  TODO.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
tools/hydra-viz/frontend/src/: app.html  layout.css
tools/hydra-viz/frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
tools/hydra-viz/src/hydra_viz/: app.py  cli.py  context.py
tools/hydra-viz/src/hydra_viz/runs/: models.py  routes.py  services.py
tools/hydra-viz/src/hydra_viz/static/: index.html
(+212 files in other folders)
