[project]
name = "ontology-hydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = ["symbolicai"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
symbolicai = { git = "https://github.com/ExtensityAI/symbolicai.git", branch = "dev" }

[dependency-groups]
dev = ["ruff>=0.14.4"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = [
    "E501", # line too long
]

fixable = ["ALL"]
