[project]
name = "ontology-hydra"
version = "0.1.0"
description = "An advanced tool for generating, visualizing, and evaluating domain-specific knowledge graphs and ontologies."
readme = "README.md"
requires-python = ">=3.12.0"
authors = [{ name = "ExtensityAI" }]
keywords = ["ontology", "knowledge graph", "domain modeling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["symbolicai"]


[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
symbolicai = { git = "https://github.com/ExtensityAI/symbolicai.git", branch = "dev" }

[dependency-groups]
dev = ["chonkie>=1.4.2", "ruff>=0.14.4"]
