[project]
name = "ontology-hydra"
version = "0.1.0"
description = "An advanced tool for generating, visualizing, and evaluating domain-specific knowledge graphs and ontologies."
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [{ name = "ExtensityAI" }]
keywords = ["ontology", "knowledge graph", "domain modeling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["symbolicai"]

[project.scripts]
hydra = 'ontology_hydra.cli.main:main'

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
symbolicai = { git = "https://github.com/ExtensityAI/symbolicai.git", branch = "dev" }

[dependency-groups]
dev = ["ruff>=0.15.0,<0.16.0"]
