[project]
name = "ontoloom"
version = "0.1.0"
description = "An advanced tool for generating, visualizing, and evaluating domain-specific knowledge graphs and ontologies."
readme = "../README.md"
requires-python = "==3.12.*"
authors = [{ name = "ExtensityAI" }]
keywords = ["ontology", "knowledge graph", "domain modeling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
